--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,12 +11,12 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - ./docker-compose.sh dev up --build
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - echo Writing image definitions file...
+      - printf '[{"environment":[{"name":"WORDPRESS_DB_USER","value":"wpuser"},{"name":"WORDPRESS_DB_PASSWORD","value":"wppass"},{"name":"WORDPRESS_DB_NAME","value":"wpdb"}],"name":"wp","image":"wordpress:latest","cpu":100,"portMappings":[{"containerPort":80,"hostPort":80}],"links":["mysql:mysql"],"memory":1024,"essential":false},{"environment":[{"name":"MYSQL_ROOT_PASSWORD","value":"rootwppass"},{"name":"MYSQL_USER","value":"wpuser"},{"name":"MYSQL_PASSWORD","value":"wppass"},{"name":"MYSQL_DATABASE","value":"wpdb"}],"name":"mysql","image":"mysql","cpu":200,"memory":2048,"essential":true}]' > imagedefinitions.json
 
 artifacts:
     files: imagedefinitions.json
